# granola-archiver

./: .gitignore  IMPLEMENTATION.md  QUICKSTART.md  README.md  config.yaml  pyproject.toml
.github/workflows/: release.yml  test.yml
archiver/: __init__.py  git_manager.py  granola_fetcher.py  main.py  markdown_formatter.py  models.py  state_tracker.py
scripts/: setup_launchd.sh  verify_setup.py
tests/: test_markdown_formatter.py
