[project]
name = "granola-archiver"
version = "0.1.0"
description = "Automated system to archive Granola meeting transcripts to GitHub"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "gitpython>=3.1",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.20",
    "black>=23.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
